# bevy_tiled_world

./: Cargo.toml
assets/maps/: basic.tmx  infinate.tmx  objects.tmx  rapier.tmx  tiny.tmx
examples/: basic.rs  infinate.rs  multiple.rs  objects.rs  rapier.rs
examples/utils/: camera.rs  colliders.rs  mod.rs
src/: lib.rs  plugin.rs
src/asset/: loader.rs  map.rs  mod.rs
src/entities/: map.rs  mod.rs  world.rs
src/systems/: active.rs  mod.rs
src/systems/spawn/: mod.rs  objects.rs  rapier.rs  utils.rs
