[package]
name = "bevy_tiled_world"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "*"
tiled = "0.9.5"
bevy_tilemap = "0.4"
bevy = { version = "0.5.0", default-features = false }

[dev-dependencies]
bevy = "0.5.0"
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools" } 
