[package]
name = "bevy_tiled_world"
version = "0.1.0"
edition = "2018"

[features]
default = []
rapier = ["bevy_rapier2d"]

[dependencies]
anyhow = "*"
tiled = "0.9.5"
bevy_tilemap = "0.4"
bevy = { version = "0.5.0", default-features = false }
bevy_rapier2d = { version = "0.10.2", optional = true }

[dev-dependencies]
bevy = "0.5.0"
bevy_prototype_debug_lines = "0.3.2"
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools", features = ["rapier2d"]  }
